<resources>
    <string name="app_name">버디콘</string>
    <string name="menu_notification">menu_notification</string>
    <string name="menu_my_page">마이페이지</string>
    <string name="menu_customcon">제작티콘</string>
    <string name="menu_giftcon">기프티콘</string>
    <string name="kakao_login_buddycon_title">Buddycon</string>
    <string name="kakao_login_buddycon_subtitle">기프티콘으로 마음을 전해요</string>
    <string name="kakao_login_success">카카오톡 로그인 성공 %1$s!</string>
    <string name="kakao_login_error">카카오톡 로그인 실패 %1$s!</string>
    <string name="fab_add_coupon">쿠폰 등록하기</string>
    <string name="all_make_coupon">제작티콘 만들기</string>
    <string name="all_next">다음</string>
    <string name="add_coupon_giftcon">기프티콘 등록하기</string>
    <string name="add_coupon_makecon">제작티콘 등록하기</string>
    <string name="makecon_title_hint">쿠폰 이름 입력</string>
    <string name="makecon_explanation_hint">전하고 싶은 한 마디 입력</string>
    <string name="makecon_get_img">이미지 불러오기</string>
    <string name="makecon_get_giftcon">기프티콘 불러오기</string>
    <string name="makecon_change_img">이미지 변경하기 </string>
    <string name="makecon_barcode_num">9912 7099 6043</string>
    <string name="all_where_use">사용처</string>
    <string name="all_valid_date">유효기간</string>
    <string name="makecon_where_use_hint">예) 버디편의점</string>
    <string name="make_con_valid_date_hint">유효기간 선택</string>
    <string name="add_coupon_fail_message">쿠폰 등록에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="add_coupon_success_message">쿠폰 등록에 성공했습니다.</string>
    <string name="add_coupon_cancel_message">쿠폰 등록을 그만할까요?</string>

    <string name="confirm_dialog">확인</string>
    <string name="cancel_dialog">취소</string>
    <string name="delete_dialog">삭제</string>
    <string name="go_home_dialog">홈으로</string>
    <string name="makecon_open_theme">테마</string>
    <string name="makecon_close_choose_mode">접기</string>
    <string name="kakao_signup_title">회원가입 완료!\n버디콘에 오신 것을 환영해요 :)</string>

    <string name="splash_skip">건너뛰기</string>
    <string name="walk_through_first_title">기프티콘을 한곳에서 관리해요</string>
    <string name="walk_through_first_subtitle">흩어져 있는 기프티콘을 한곳에서 확인하고\n만료 전 알림으로 유효기간을 관리해요</string>
    <string name="walk_through_second_title">기프티콘을 꾸며서 선물해요</string>
    <string name="walk_through_second_subtitle">가지고 있는 기프티콘을\n나만의 제작티콘으로 꾸며서 선물해요</string>
    <string name="walk_through_third_title">제작티콘을 통해 마음을 전해요</string>
    <string name="walk_through_third_subtitle">어릴 적 부모님께 드렸던 안마 쿠폰처럼\n직접 쿠폰을 만들어 마음을 전해요</string>
    <string name="walk_through_start">시작하기</string>
    <string name="signup_appbar">회원가입</string>
    <string name="signup_terms">버디콘의 서비스\n이용약관에 동의해주세요</string>
    <string name="signup_all_complete_terms">전체 동의하기</string>
    <string name="signup_use_terms">[필수] 이용약관 동의</string>
    <string name="signup_privacy_info_terms">[필수] 개인정보 처리방침 동의</string>
    <string name="signup_complete">회원가입 완료</string>

    <string name="add_coupon_accept">저장하기</string>
    <string name="add_coupon_cancel">취소하기</string>
    <string name="add_coupon_hint_title">기프티콘 이름 (최대 16자) *</string>
    <string name="add_coupon_expire_date">유효기간</string>
    <string name="add_coupon_expire_date_input">유효기간 *</string>
    <string name="add_coupon_hint_expire_date">유효기간 선택</string>
    <string name="add_coupon_store_name">사용처</string>
    <string name="add_coupon_hint_store_name">예) 버디편의점</string>
    <string name="add_coupon_sent_member">보낸사람</string>
    <string name="add_coupon_hint_sent_member">최대 16자 입력</string>
    <string name="add_coupon_memo">메모</string>
    <string name="add_coupon_hint_memo">최대 50자 입력</string>
    <string name="add_coupon_input_gifticon_message">기프티콘 정보를 등록해주세요</string>
    <string name="add_coupon_load_gifticon_message">기프티콘 정보를 불러왔어요</string>
    <string name="add_coupon_load_makecon_message">제작티콘 정보를 불러왔어요</string>
    <string name="add_coupon_app_bar_title_gifticon">기프티콘 등록하기</string>
    <string name="add_coupon_app_bar_title_makecon">제작티콘 등록하기</string>

    <string name="usable_coupon">사용가능</string>
    <string name="used_coupon">사용완료</string>
    <string name="validation_date_filter">유효기간순</string>
    <string name="made_coupon">만든쿠폰</string>
    <string name="filter_not_share">미공유순</string>
    <string name="filter_expiration_date">유효기간순</string>
    <string name="filter_upload">등록순</string>
    <string name="filter_name">이름순</string>
    <string name="giftcon_usable_empty_message">아래 + 버튼을 눌러\n가지고 있는 기프티콘을 등록해 주세요</string>
    <string name="giftcon_used_empty_message">사용한 기프티콘이 없어요</string>
    <string name="customcon_usable_empty_message">아래 + 버튼을 눌러\n가지고 있는 제작티콘을 등록해 주세요</string>
    <string name="customcon_used_empty_message">사용한 제작티콘이 없어요</string>
    <string name="made_coupon_empty_message">아래 + 버튼을 눌러\n가지고 있는 제작티콘을 만들어 보세요</string>
    <string name="get_giftcon_guide_message">제작티콘으로 만드실\n기프티콘을 선택해주세요</string>
    <string name="all_select">선택하기</string>
    <string name="coupon_not_share_message">아직 선물하지 않은\n쿠폰입니다</string>
    <string name="kakao_error_dialog_message">다시 한 번 시도해주세요\n이 내용은 카카오톡 서버에서 발송되었어요</string>
    <string name="kakao_error_dialog_title">카카오톡으로 시작할 수 없어요</string>

    <string name="usable_detail_coupon">사용가능 기프티콘</string>
    <string name="used_detail_coupon">사용완료 기프티콘</string>
    <string name="check_price_coupon">금액권인가요?</string>
    <string name="coupon_spare_price">잔여금액</string>
    <string name="coupon_spare_price_himt">남은 금액을 입력하세요</string>
    <string name="coupon_used_badge">사용\n완료</string>
    <string name="coupon_update">수정하기</string>
    <string name="coupon_rollback">사용완료 되돌리기</string>

    <string name="giftcon_expire_date_message_title">기프티콘의 기한이 만료되었어요</string>
    <string name="custom_coupon_expire_date_message_title">기프티콘의 기한이 만료되었어요</string>
    <string name="giftcon_expire_date_message_description">아래의 사용완료 버튼을 눌러주세요</string>
    <string name="giftcon_delete_success_message">쿠폰이 삭제되었어요.</string>
    <string name="gifticon_send_member">보낸사람</string>

</resources>