<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_message_dialog">

        <TextView
            android:id="@+id/tv_error_title"
            style="@style/bold18"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/kakao_error_dialog_title"
            android:textColor="@color/gray90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error_message"
            style="@style/regular14"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/kakao_error_dialog_message"
            android:textColor="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error_title" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/bold14"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:layout_marginVertical="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:text="@string/confirm_dialog"
            android:textColor="@color/skb_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error_message" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/bold14"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:layout_marginVertical="24dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_dialog"
            android:textColor="@color/gray90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@id/tv_error_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>