<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.giftcon.GiftConDetailActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/layout_appbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/usable_detail_coupon}" />

        <View
            android:id="@+id/v_appbar_border"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_coupon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_appbar_border">

            <ImageView
                android:id="@+id/iv_coupon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                tools:src="@drawable/img_theme1" />

            <Button
                android:id="@+id/btn_expire_date"
                style="@style/bold16"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:background="@drawable/bg_coupon_expire_date"
                android:textColor="@color/white"
                tools:text="D-1"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_volume_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:background="@drawable/ic_volume_up" />

            <Button
                style="@style/bold22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/img_used_badge"
                android:text="@string/coupon_used_badge"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:id="@+id/sv_coupon_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/btn_use_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_coupon">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_coupon_title"
                    style="@style/bold22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/gray90"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="쿠폰 꼭 쓰기!" />

                <TextView
                    android:id="@+id/tv_expiration_date"
                    style="@style/regular16"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:text="@string/all_valid_date"
                    android:textColor="@color/gray60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_coupon_title" />

                <TextView
                    android:id="@+id/tv_expiration_date_info"
                    style="@style/regular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/gray90"
                    app:layout_constraintStart_toEndOf="@id/tv_expiration_date"
                    app:layout_constraintTop_toTopOf="@id/tv_expiration_date"
                    tools:text="2022년 11월 14일" />

                <View
                    android:id="@+id/v_border1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_expiration_date" />

                <TextView
                    android:id="@+id/tv_use_place"
                    style="@style/regular16"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/all_where_use"
                    android:textColor="@color/gray60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_border1" />

                <TextView
                    android:id="@+id/tv_use_place_info"
                    style="@style/regular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/gray90"
                    app:layout_constraintStart_toEndOf="@id/tv_use_place"
                    app:layout_constraintTop_toTopOf="@id/tv_use_place"
                    tools:text="CU 편의점" />

                <View
                    android:id="@+id/v_border2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_use_place" />

                <TextView
                    android:id="@+id/tv_memo"
                    style="@style/regular16"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/add_coupon_memo"
                    android:textColor="@color/gray60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_border2" />

                <EditText
                    android:id="@+id/tv_memo_info"
                    style="@style/regular16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/add_coupon_hint_memo"
                    android:textColor="@color/gray90"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_memo"
                    app:layout_constraintTop_toTopOf="@id/tv_memo" />

                <View
                    android:id="@+id/v_border3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_memo_info" />

                <TextView
                    android:id="@+id/tv_price_coupon"
                    style="@style/regular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/check_price_coupon"
                    android:textColor="@color/gray60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_border3" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_price_coupone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/bg_switch_thumb_price_coupon"
                    app:layout_constraintBottom_toBottomOf="@id/tv_price_coupon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_price_coupon"
                    app:track="@drawable/bg_switch_price_coupon" />

                <View
                    android:id="@+id/v_border4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="14dp"
                    android:background="@color/gray30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_price_coupon" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_spare_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_price_layout"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_price_coupon">


                    <TextView
                        android:id="@+id/tv_spare_price"
                        style="@style/regular16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/coupon_spare_price"
                        android:textColor="@color/gray60"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_spare_price"
                        style="@style/regular16"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="16dp"
                        android:background="@null"
                        android:gravity="center_vertical|end"
                        android:hint="@string/coupon_spare_price_himt"
                        app:layout_constraintBottom_toBottomOf="@id/tv_spare_price"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_spare_price"
                        app:layout_constraintTop_toTopOf="@id/tv_spare_price" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_coupon_delete"
                    android:layout_width="78dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/ic_coupon_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_spare_price" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_use_complete"
            style="@style/bold16"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/gray80"
            android:text="@string/used_coupon"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_make"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_coupon_info" />

        <Button
            android:id="@+id/btn_make"
            style="@style/bold16"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/skb_blue"
            android:text="@string/all_make_coupon"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_use_complete"
            app:layout_constraintTop_toBottomOf="@id/sv_coupon_info" />

        <Button
            android:id="@+id/btn_update"
            style="@style/bold16"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/skb_blue"
            android:text="@string/coupon_update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_coupon_info" />

        <Button
            android:id="@+id/btn_rollback"
            style="@style/bold16"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/gray80"
            android:text="@string/coupon_rollback"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_coupon_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>